<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:elevation="16dp"
    android:layout_height="match_parent">


    <RelativeLayout
        android:id="@+id/alpha_view"
        android:background="@color/textBackgroundColor"
        android:alpha="0.9"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <TextView
        android:id="@+id/buysell_cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/close_popup"
        android:layout_toStartOf="@id/close_popup"
        android:layout_alignTop="@id/close_popup"
        android:gravity="center_vertical"
        android:layout_marginEnd="@dimen/nav_margin"
        android:layout_above="@+id/sell_layout"
        android:text="@string/buy_sell"
        android:textSize="20sp"
        android:textColor="@color/textColor"
        android:textStyle="bold"
        />


    <LinearLayout
        android:layout_marginEnd="10dp"
        android:padding="15dp"
        android:background="@drawable/rounded_background_rectangle"
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:layout_toStartOf="@+id/sell_layout"
        android:id="@+id/trade_layout"
        android:layout_centerVertical="true"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:textSize="22sp"
                android:text="@string/trade"
                />

            <TextView
                android:id="@+id/trade_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                />

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            >


            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/trade_inc_btn"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/plus_add"
                    />
                <EditText

                    android:id="@+id/trade_et"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:inputType="number"
                    android:textColor="@color/textColor"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/_0"
                    />
                <Button
                    android:id="@+id/trade_dec_btn"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/subtract_minus"
                    android:padding="0dp"
                    />
            </LinearLayout>


            <TextView
                android:id="@+id/trade_for_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text= "@string/for_trade"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                />


<!--            <Spinner-->
<!--                android:id="@+id/trade_spinner"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_gravity="center"-->

<!--                />-->

        </LinearLayout>


        <Button
            android:id="@+id/trade_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:layout_gravity="end"
            android:text="@string/trade"
            android:textStyle="bold"
            android:background="@drawable/rounded_orange_rectangle"
            android:textColor="@color/white"
            />
    </LinearLayout>



    <LinearLayout
        android:layout_marginStart="10dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:padding="15dp"
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:id="@+id/buy_layout"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:background="@drawable/rounded_background_rectangle"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:layout_marginEnd="10dp"
                android:text="@string/buy"
                android:layout_marginBottom="10dp"
                />

            <TextView
                android:id="@+id/buy_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                />

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/buy_dec_btn"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/subtract_minus"
                android:padding="0dp"
                android:layout_gravity="center_vertical"
                />

            <EditText
                android:id="@+id/buy_et"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                android:inputType="number"
                android:text="@string/_0"
                android:textColor="@color/textColor"
                android:autofillHints="" />

            <Button
                android:id="@+id/buy_inc_btn"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/plus_add"
                android:padding="0dp"
                android:layout_gravity="center_vertical"
                />


        </LinearLayout>



        <Button
            android:id="@+id/buy_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:layout_gravity="end"
            android:text="@string/buy"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:background="@drawable/rounded_green_rectangle"
            android:textColor="@color/white"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:padding="15dp"
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:id="@+id/sell_layout"
        android:layout_centerVertical="true"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/rounded_background_rectangle"
        android:layout_toStartOf="@+id/buy_layout"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/sell"
                />

            <TextView
                android:id="@+id/sell_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                />

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <Button
                android:id="@+id/sell_dec_btn"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/subtract_minus"
                android:padding="0dp"
                android:layout_gravity="center_vertical"
                />


            <EditText
                android:id="@+id/sell_et"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:inputType="number"
                android:textColor="@color/textColor"
                android:layout_gravity="center_horizontal"
                android:text="@string/_0"
                />
            <Button
                android:id="@+id/sell_inc_btn"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/plus_add"
                android:layout_gravity="center_vertical"
                />


        </LinearLayout>


        <Button
            android:id="@+id/sell_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textAllCaps="false"
            android:layout_gravity="end"
            android:text="@string/sell"
            android:textStyle="bold"
            android:background="@drawable/rounded_red_rectangle"
            android:textColor="@color/white"
            />
    </LinearLayout>



    <Button
        android:id="@+id/close_popup"
        android:layout_marginTop="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textColor"
        android:layout_alignParentTop="true"
        android:layout_alignEnd="@+id/buy_layout"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:text="@string/close"
        android:textAllCaps="false"

        />





</RelativeLayout>